[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/GUI/default_theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/MainGame.gd" type="Script" id=2]
[ext_resource path="res://assets/art/end_level.png" type="Texture" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 87.0
theme = ExtResource( 1 )
text = "Escape
From
COVID-19"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 127.0
margin_right = 200.0
margin_bottom = 147.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 187.0
margin_right = 200.0
margin_bottom = 225.0

[node name="DifficultyDescription" type="Label" parent="VBoxContainer/DifficultyContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Choose the difficulty"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="OptionButton" parent="VBoxContainer/DifficultyContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 38.0
text = "Resfriadinho"
align = 1

[node name="InterfaceTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HintTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="HintContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -96.0
margin_right = 240.0
margin_bottom = 96.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HintContainer"]
margin_right = 480.0
margin_bottom = 27.0
grow_vertical = 0
theme = ExtResource( 1 )
text = "Nothing label"
clip_text = true

[node name="Sprite" type="Sprite" parent="HintContainer"]
position = Vector2( 416.369, 210.833 )
texture = ExtResource( 3 )
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="item_selected" from="VBoxContainer/DifficultyContainer/Difficulty" to="." method="_on_Difficulty_item_selected"]
[connection signal="timeout" from="HintTimer" to="." method="_on_HintTimer_timeout"]
